sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value getNumberValeurs
		for (i<-0 to getNumberValeurs-2) {
                             ^