sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var test:Boolean=true;

	while(test==true)
		for (i<-0 to getNumberValeurs-2) {
			if (plusPetitQue(i+1,i)) {
				echange(i+1,i)
				}
			else test= false
			}
}
